syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "WeldingAutomation.CameraAutoShutter";

package cameraAI;

service CameraAutoShutter {
  rpc Process (CameraAutoShutterRequest) returns (google.protobuf.Empty);
}


message CameraAutoShutterRequest {
    int32 UpperBound = 1;
    int32 LowerBound = 2;

}